# crewai_newsletter_agent

./: .gitignore  Generated Newsletter.html  app.py  example.env  pyproject.toml  requirements.txt  send_newsletter.py
src/newsletter_gen/: crew.py  main.py
src/newsletter_gen/config/: newsletter_template.html
